# Selfie

./: .clang-format  CMakeLists.txt  README.md
include/: crtp.hpp  eliminate_overloads.hpp  logger.hpp  recursive_lambda.hpp  sfinae_friendly.hpp  unify_call_syntax.hpp
src/: crtp.cpp  eliminate_overloads.cpp  logger.cpp  recursive_lambda.cpp  sfinae_friendly.cpp  unify_call_syntax.cpp
